--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -1,4 +1,3 @@
-
 version: '3.8'
 
 services:
@@ -141,6 +140,7 @@ services:
       MAX_FILE_SIZE: 21474836480
       COMPRESSION_LEVEL: 3
       BACKUP_ENABLED: "false"
+      USE_X_ACCEL: "1"
     ports:
       - "8001:8000"
     volumes:
@@ -188,7 +188,6 @@ services:
       start_period: 30s
     restart: unless-stopped
 
-# kafka
   chunk-processor:
     build:
       context: ../services/storage-service
@@ -210,6 +209,26 @@ services:
     volumes:
       - /tmp/chunks:/tmp/chunks  # Shared temp storage
 
+  # Nginx reverse-proxy (fronting FastAPI + optional static frontend)
+  nginx:
+    image: nginx:stable
+    container_name: edge-nginx
+    depends_on:
+      storage-service:
+        condition: service_healthy
+      web-service:
+        condition: service_healthy
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./Infrastructure/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - storage_data:/app/storage:ro
+      # - ./frontend-clean/build:/usr/share/nginx/html:ro
+    restart: unless-stopped
+    networks:
+      - default
+
 # Named volumes for data persistence
 volumes:
   postgres_data:
@@ -228,28 +247,6 @@ volumes:
     driver: local
   storage_data:
     driver: local
-
-# Nginx reverse-proxy (fronting FastAPI + optional static frontend)
-  nginx:
-    image: nginx:stable
-    container_name: edge-nginx
-    depends_on:
-      storage-service:
-        condition: service_healthy
-      web-service:
-        condition: service_healthy
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./Infrastructure/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      # Mount the storage volume so nginx can serve files directly via X-Accel-Redirect
-      - storage_data:/app/storage:ro
-      # (optional) serve built frontend from nginx
-      # - ./frontend-clean/build:/usr/share/nginx/html:ro
-    restart: unless-stopped
-    networks:
-      - default
 
 # Networks (optional - uses default bridge network if not specified)
 networks:
