Edge - Storage service - WebSocket integration

--- a/infrastructure/nginx/nginx.conf
+++ b/infrastructure/nginx/nginx.conf
@@ -1,59 +1,80 @@
-user  nginx;
+user nginx;
 worker_processes auto;
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 
-events { worker_connections 10240; }
+events { 
+    worker_connections 10240; 
+}
 
 http {
-  include       /etc/nginx/mime.types;
-  default_type  application/octet-stream;
-
-  sendfile            on;
-  tcp_nopush          on;
-  tcp_nodelay         on;
-  keepalive_timeout   65;
-  client_max_body_size 0;
-
-  # upstream to FastAPI (adjust host:port per your compose / k8s)
-  upstream fastapi_upstream {
-    server fastapi:8000;   # use service name in docker-compose; in prod use load balancer
-  }
-
-  server {
-    listen 80;
-    server_name _;  # change to FQDN in prod
-
-    # Proxy API calls to FastAPI
-    location /api/ {
-      proxy_pass http://fastapi_upstream;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-
-      # Streaming large responses
-      proxy_buffering off;
-      proxy_request_buffering off;
-      proxy_read_timeout 3600s;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    client_max_body_size 0;
+    
+    # Map for WebSocket upgrade
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
     }
-
-    # Static / frontend (optional) - serve built frontend if you want
-    location / {
-      root /usr/share/nginx/html;  # mount frontend build here if desired
-      try_files $uri $uri/ =404;
+    
+    # upstream to FastAPI
+    upstream fastapi_upstream {
+        server storage-service:8000;  # Changed from 'fastapi' to 'storage-service'
     }
-
-    # Internal protected location used with X-Accel-Redirect
-    location /internal_protected/ {
-      internal;
-      alias /app/storage/;   # Map /internal_protected/<path> -> /app/storage/<path>
-      # Performance
-      sendfile on;
-      tcp_nopush on;
-      tcp_nodelay on;
-      # Optional directio for very large files:
-      # directio 4m;
+    
+    server {
+        listen 80;
+        server_name _;
+        
+        # WebSocket endpoint - MUST come before /api/
+        location /ws {
+            proxy_pass http://fastapi_upstream;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # WebSocket timeouts
+            proxy_connect_timeout 7d;
+            proxy_send_timeout 7d;
+            proxy_read_timeout 7d;
+        }
+        
+        # Proxy API calls to FastAPI
+        location /api/ {
+            proxy_pass http://fastapi_upstream;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Streaming large responses
+            proxy_buffering off;
+            proxy_request_buffering off;
+            proxy_read_timeout 3600s;
+        }
+        
+        # Static / frontend
+        location / {
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;  # Changed to support React Router
+        }
+        
+        # Internal protected location for X-Accel-Redirect
+        location /internal_protected/ {
+            internal;
+            alias /app/storage/;
+            sendfile on;
+            tcp_nopush on;
+            tcp_nodelay on;
+        }
     }
-  }
 }
