--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -141,6 +141,7 @@ services:
       COMPRESSION_LEVEL: 3
       BACKUP_ENABLED: "false"
       USE_X_ACCEL: "1"
+      
     ports:
       - "8001:8000"
     volumes:
@@ -222,7 +223,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./Infrastructure/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - storage_data:/app/storage:ro
       # - ./frontend-clean/build:/usr/share/nginx/html:ro
     restart: unless-stopped
