--- a/services/storage-service/requirements.txt
+++ b/services/storage-service/requirements.txt
@@ -6,6 +6,7 @@ redis==5.0.1
 aioboto3==12.0.0
 zstandard==0.22.0
 cryptography==41.0.7
+PyJWT==2.9.0
 kafka-python==2.0.2
 aiofiles==23.2.1
 python-multipart==0.0.6
