--- a/services/storage-service/Dockerfile
+++ b/services/storage-service/Dockerfile
@@ -1,6 +1,9 @@
 # services/storage-service/Dockerfile
 FROM python:3.11-slim
 
+#curl installation
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 # Install system dependencies
