--- a/infrastructure/nginx/nginx.conf
+++ b/infrastructure/nginx/nginx.conf
@@ -3,35 +3,81 @@ worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
-events { 
-    worker_connections 10240; 
+events {
+    worker_connections 10240;
+    use epoll;                          # Better performance on Linux
+    multi_accept on;                    # Accept multiple connections at once
 }
 
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
+
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
+
     keepalive_timeout 65;
-    client_max_body_size 0;
-    
+    keepalive_requests 1000;            # Allow more requests per connection
+
+    # Upload settings
+    client_max_body_size 0;             # Allow unlimited upload size
+    client_body_timeout 7200s;          # 2 hours for very large uploads
+    client_header_timeout 60s;
+    client_body_buffer_size 128k;       # Buffer for request body
+    client_body_temp_path /tmp/nginx_uploads; # Temp path for large uploads
+
+    # Performance optimizations
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml;
+
     # Map for WebSocket upgrade
     map $http_upgrade $connection_upgrade {
         default upgrade;
-        '' close;
+        ''      close;
     }
-    
-    # upstream to FastAPI
+
+    # Upstream to FastAPI app
     upstream fastapi_upstream {
-        server storage-service:8000;  # Changed from 'fastapi' to 'storage-service'
+        server storage-service:8000;
+        keepalive 32;                   # Keep connections alive
+        keepalive_requests 1000;
+        keepalive_timeout 60s;
     }
-    
+
     server {
         listen 80;
         server_name _;
-        
-        # WebSocket endpoint - MUST come before /api/
+
+        # Security headers
+        add_header X-Frame-Options DENY;
+        add_header X-Content-Type-Options nosniff;
+        add_header X-XSS-Protection "1; mode=block";
+
+        # WebSocket endpoint for API path
+        location ~ ^/api/v1/ws {
+            proxy_pass http://fastapi_upstream;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # WebSocket timeouts
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 7d;
+            proxy_read_timeout 7d;
+
+            # Turn off buffering for WebSockets
+            proxy_buffering off;
+            proxy_cache off;
+        }
+
+        # Legacy WebSocket route
         location /ws {
             proxy_pass http://fastapi_upstream;
             proxy_http_version 1.1;
@@ -41,33 +87,70 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # WebSocket timeouts
-            proxy_connect_timeout 7d;
+
+            proxy_connect_timeout 60s;
             proxy_send_timeout 7d;
             proxy_read_timeout 7d;
+            proxy_buffering off;
         }
-        
-        # Proxy API calls to FastAPI
-        location /api/ {
+
+        # Special handling for upload endpoints (more aggressive timeouts)
+        location ~ ^/api/v1/upload/ {
             proxy_pass http://fastapi_upstream;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Streaming large responses
+
+            # Critical for uploads - no buffering
             proxy_buffering off;
             proxy_request_buffering off;
-            proxy_read_timeout 3600s;
+
+            # Very long timeouts for uploads
+            proxy_connect_timeout 300s;     # 5 minutes to connect
+            proxy_send_timeout 7200s;       # 2 hours to send
+            proxy_read_timeout 7200s;       # 2 hours to read
+
+            # Optimize for streaming
+            proxy_busy_buffers_size 64k;
+            proxy_temp_file_write_size 128k;
+            proxy_buffer_size 16k;
+            proxy_buffers 8 16k;
         }
-        
-        # Static / frontend
+
+        # Regular API calls
+        location /api/ {
+            proxy_pass http://fastapi_upstream;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Moderate timeouts for regular API calls
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
+
+            # Some buffering for regular requests (better performance)
+            proxy_buffering on;
+            proxy_buffer_size 16k;
+            proxy_buffers 8 16k;
+        }
+
+        # Static files with caching
         location / {
             root /usr/share/nginx/html;
-            try_files $uri $uri/ /index.html;  # Changed to support React Router
+            try_files $uri $uri/ /index.html;
+            
+            # Cache static assets
+            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+                expires 1y;
+                add_header Cache-Control "public, immutable";
+            }
         }
-        
+
         # Internal protected location for X-Accel-Redirect
         location /internal_protected/ {
             internal;
@@ -75,6 +158,16 @@ http {
             sendfile on;
             tcp_nopush on;
             tcp_nodelay on;
+            
+            # Add Content-Security-Policy for downloaded files
+            add_header Content-Security-Policy "default-src 'none'; script-src 'none'; object-src 'none';";
+        }
+
+        # Health check endpoint
+        location /health {
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
         }
     }
 }
